trying out p5js

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,8 @@
 </head>
 <body onkeydown="sendKey(event, 1)" onkeyup="sendKey(event, 0)">
 	<script type="text/javascript" src="/eel.js"></script>
+	<script type="text/javascript" src="js/p5.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
-	<canvas id="myCanvas" width="1024" height="512"></canvas>
+<!--	<canvas id="myCanvas" width="1024" height="512"></canvas>-->
 </body>
 </html>
